# Swap

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  app.py  pyproject.toml  requirements.txt  run.py
frontend/: index.html
frontend/css/: main.css  theme.css
frontend/js/: api.js  app.js  components.js  utils.js  websocket.js
src/api/: dependencies.py  main.py  models.py  websocket.py
src/api/routes/: convert.py  formats.py  history.py  settings.py
src/converters/: base.py  comic.py  document.py  ebook.py  image.py  pdf.py  presentation.py  spreadsheet.py  vector.py
src/services/: __init__.py  conversion_service.py  format_registry.py  history_service.py
src/utils/: config.py  file_utils.py  logger.py
tests/: test_utils.py
tests/converters/: test_base.py  test_document.py  test_document_edge_cases.py  test_image.py  test_image_edge_cases.py  test_pdf.py  test_pdf_edge_cases.py  test_spreadsheet.py
tests/services/: test_conversion_service.py  test_format_registry.py
